--- a/postgres/postgres.yaml
+++ b/postgres/postgres.yaml
@@ -21,4 +21,5 @@ services:
     # Copy files from dbinit into the image so taht the will be run on boot
     volumes:
       - ./initdb:/docker-entrypoint-initdb.d
+      - ./pg_data:/var/lib/postgresql/data
     
